fixed overlapping flower icon in heading

--- a/src/scss/components/_heading.scss
+++ b/src/scss/components/_heading.scss
@@ -5,6 +5,7 @@
 	top: 0;
 	z-index: 1000;
 	height: 4.6rem;
+	line-height: 4.6rem;
 
 	&__content {
 		display: flex;
