--- a/src/scss/components/_home-sticker.scss
+++ b/src/scss/components/_home-sticker.scss
@@ -1,15 +1,15 @@
 .home-sticker {
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	position: fixed;
 	z-index: 2000;
+	top: 0;
+	justify-content: center;
+	align-items: center;
+	display: flex;
 	height: 4.6rem;
-	width: 100%;
 	pointer-events: none;
 
 	img {
+		height: clamp(1.6rem, 10vw, 3rem);
 		width: clamp(1.6rem, 10vw, 3rem);
-		height: auto;
 	}
 }
